--- a/index.html
+++ b/index.html
@@ -1,4 +1,92 @@
-<h1>Hello World</h1>
 
-<h2>My name is nellos.</h2>
+ <title> Nellos.net </title>
+ 
+ <style type="text/css">
+            html {
+    overflow: hidden;
+}
 
+body {
+    font-family: 'Noto Sans',sans-serif;
+    font-size: 80%;
+    overflow: hidden;
+    background: url("http://nellos.net/assets/1.jpg") no-repeat fixed;
+}
+
+h1 {
+    font-size: 138%;
+    font-weight: 600;
+    text-align: center;
+    color: #E6E6E6;
+}
+
+p {
+    color: #EAEAEA;
+    text-align: center;
+}
+
+#outer {
+    display: table;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+#middle {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+#inner {
+    margin-left: auto;
+    margin-right: auto;
+    width: 470px;
+    background: none repeat scroll 0 0 #303030;
+    border: 1px solid #171717;
+    border-radius: 5px 5px 5px 5px;
+    padding: 15px;
+}
+
+#read {
+    word-wrap: break-word;
+}
+
+#read p {
+    text-align: left;
+}
+
+a:active,a:link,a:visited {
+    color: #777777;
+    text-decoration: underline;
+}
+
+a:hover {
+    color: #777777;
+    text-decoration: none;
+}
+
+input[type="text"], input[type="submit"], input[type="button"], textarea {
+    color: #EAEAEA;
+    padding: 5px;
+    background-color : #4A4A4A;
+    border: 0px;
+    height: 20px;
+}
+
+input[type="submit"], input[type="button"] {
+    height: 30px;
+}		</style>
+  
+  
+  <center> <h1> Nellos.net </center> </h1>
+  
+  <hr />
+  
+  <center> <h1> Thediamondminecart </h1> </center>
+  
+  <hr />
+  
+    <p> Thediamondminecart youtube channel is a channel I was watching for a long time. It was one of my favorites and go and check <br>
+	it out. The link is here : <a href = "http://www.youtube.com/user/TheDiamondMinecart?feature=watch" /> Thediamondminecart youtube channel </a> </p>
+  
+  <hr />
