--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@ body {
     font-family: 'Noto Sans',sans-serif;
     font-size: 80%;
     overflow: hidden;
-    background: url("http://nellos.net/assets/1.jpg") no-repeat fixed;
+    background: url("1.jpg") no-repeat fixed;
 }
 
 h1 {
     font-size: 138%;
     font-weight: 600;
     text-align: center;
-    color: #E6E6E6;
+    color: #000000;
 }
 
 p {
@@ -85,8 +85,8 @@ input[type="submit"], input[type="button"] {
   <center> <h1> Thediamondminecart </h1> </center>
   
   <hr />
-  
-    <p> Thediamondminecart youtube channel is a channel I was watching for a long time. It was one of my favorites and go and check <br>
+      <p> Thediamondminecart youtube channel is a channel I was watching for a long time. It was one of my favorites and go and check <br>
+
 	it out. The link is here : <a href = "http://www.youtube.com/user/TheDiamondMinecart?feature=watch" /> Thediamondminecart youtube channel </a> </p>
   
-  <hr />
+ <hr />
