--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 
- <title> Nellos.net </title>
- 
+
  <style type="text/css">
             html {
     overflow: hidden;
@@ -77,16 +76,34 @@ input[type="submit"], input[type="button"] {
     height: 30px;
 }		</style>
   
+
+                  <center> <h1> Nellos.net </h1> </center>
+				  
+  <hr />
+       <center> <h1> Updates </h1> </center>
   
-  <center> <h1> Nellos.net </center> </h1>
+  <p> Updates are coming soon.
   
   <hr />
   
-  <center> <h1> Thediamondminecart </h1> </center>
+  <th> year </th>
+  
+  <th> updates </th>
   
   <hr />
+  
+  <td> 2014 </td> <td> 4 </td>
+
+  <hr />				  
+
+ 				  <center> <h1> Thediamondminecart </h1> </center>
+  
+  <hr />
+  
       <p> Thediamondminecart youtube channel is a channel I was watching for a long time. It was one of my favorites and go and check <br>
 
 	it out. The link is here : <a href = "http://www.youtube.com/user/TheDiamondMinecart?feature=watch" /> Thediamondminecart youtube channel </a> </p>
   
- <hr />
+  <hr />
+  
+  </html>
