--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@ input[type="submit"], input[type="button"] {
   <hr />
        <center> <h1> Updates </h1> </center>
   
-  <p> Updates are coming soon.
+  <p> Updates are coming soon.</p>
+  
+  <h1>I AM A GIANT PONY</h1>
   
   <hr />
