--- a/index.html
+++ b/index.html
@@ -85,6 +85,6 @@ input[type="submit"], input[type="button"] {
   
   <p> Updates are coming soon.</p>
   
-  <h1>I AM A GIANT PONY</h1>
+  <h1>NELLOS FORCED ME TO REMOVE...</h1>
   
   <hr />
