--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
- <title> Nellos.net interplanetary network </title>
+ <title> Nellos.net </title>
  
   <style type="text/css">
             html {
