--- a/index.html
+++ b/index.html
@@ -78,17 +78,15 @@ input[type="submit"], input[type="button"] {
 }		</style>
   
  
- <center> <img src = "Untitled.png" /> </center>
  
+ <h1> Updates </h1>
+
  <hr />
  
- <p> I am a whale biologist and I can fix your whales! If you don't <br>
-     have one take one with a crane. We also have a whale agency <br>
-     which launches whales to space hitting 10000000 times the speed <br>
-     of light and can go to the planet called kepler - 24b. </p>
+ <p> coming soon. </p>
 	 
 	<hr />
 	
-	<center> <a href = "index.html" /> Nellos.net </a> </center>
 	
-	<hr />
+	
+	
