--- a/index.html
+++ b/index.html
@@ -119,14 +119,10 @@ try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag
 		color: #ffffff;
 		margin: 20px 0 20px 0;
 	    display: inline;
-	    margin-left: 900px;
+	    margin-right: 1600px;
 		
 		}
 		
-		h1:hover {
-		border: 10px solid #ffffff;
-		
-		}
 		
 		h2 {
 		color: #ffffff;
@@ -161,6 +157,7 @@ try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag
 	 text-decoration: none;
 	 margin: 20px 20px 20px 0;
 	 font-stize: 18px;
+	 text-align: center;
 	
 	 }
 	 
